--- a/src/assets/css/mixin.scss
+++ b/src/assets/css/mixin.scss
@@ -30,3 +30,26 @@
   top: 50%;
   transform: translateY(-50%);
 }
+
+// 滚动条优化
+@mixin beauty_scroll {
+  // 辣鸡滚动条给老子si（三声|重音）
+  //定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸
+  &::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    background-color: $light-gray;
+  }
+
+  //定义滚动条轨道
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0);
+  }
+
+  //定义滑块 内阴影+圆角
+  &::-webkit-scrollbar-thumb {
+    border-radius: 2px;
+    background-color: $deep-gray;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  }
+}
