--- a/src/assets/css/mixin.scss
+++ b/src/assets/css/mixin.scss
@@ -5,3 +5,51 @@
   -webkit-line-clamp: $numoflines;
   overflow: hidden;
 }
+
+// 背景图片
+@mixin bis($url) {
+  background-image: url($url);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+// 居中
+@mixin all_middle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+@mixin width_middle {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+@mixin height_middle {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+// 滚动条优化
+@mixin beauty_scroll {
+  // 辣鸡滚动条给老子si（三声|重音）
+  //定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸
+  &::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    background-color: $light-gray;
+  }
+
+  //定义滚动条轨道
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0);
+  }
+
+  //定义滑块 内阴影+圆角
+  &::-webkit-scrollbar-thumb {
+    border-radius: 2px;
+    background-color: $deep-gray;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  }
+}
